--- a/activities.html
+++ b/activities.html
@@ -16,6 +16,7 @@
     <nav>
       <ul>
         <li><a href= "index.html">Home</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
         <li><a href= "gallery.html">Gallery</a></li>
         <li><a href= "activities.html">Activities</a></li>
         <li><a href="info.html">Info</a></li>
@@ -34,32 +35,32 @@
     <h3> Live Music </h3>
 
     <!-- Source: https://www.youtube.com/watch?v=QchZ7VKmYlw -->
-    <img src="images/liveMusic.jpg" alt="Live music at Apple Fest"/>
-    Source: <cite><a href="https://www.youtube.com/watch?v=QchZ7VKmYlw">YouTube</a></cite>
+    <img class="activitiesPic" src="images/liveMusic.jpg" alt="Live music at Apple Fest"/>
+    <cite><a href="https://www.youtube.com/watch?v=QchZ7VKmYlw">YouTube</a></cite>
 
     <p> Live music is one of Apple Fest's greatest features! At Bernie Milton Stage you'll find tons of different artists and genres from jazz to folk. Featured here is Dapper Dan performing Toots & The Maytals "54-46" in September of 2017. </p>
 
     <h3> Dancing </h3>
 
     <!-- Source: https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/ -->
-    <img src="images/dancing.jpg" alt="Couple dancing at Apple Fest"/>
-    Source: <cite><a href="https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/">The Ithacan</a></cite>
+    <img class="activitiesPic" src="images/dancing.jpg" alt="Couple dancing at Apple Fest"/>
+    <cite><a href="https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/">The Ithacan</a></cite>
 
     <p> Of course, with music comes dancing. You'll find people dancing on every corner of the Commons! </p>
 
     <h3> Rides </h3>
 
     <!-- Source: https://www.youtube.com/watch?v=L8dSbuQkY48 -->
-    <img src="images/rides.jpg" alt="Couple dancing at Apple Fest"/>
-    Source: <cite><a href="https://www.youtube.com/watch?v=L8dSbuQkY48">YouTube</a></cite>
+    <img class="activitiesPic" src="images/rides.jpg" alt="Couple dancing at Apple Fest"/>
+    <cite><a href="https://www.youtube.com/watch?v=L8dSbuQkY48">YouTube</a></cite>
 
     <p> What's a festival without carnival rides? Featured here is the Ferris Wheel from Apple Fest 2013. </p>
 
     <h3> Entertainment </h3>
 
     <!-- Source: https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/ -->
-    <img src="images/fire.jpg" alt="Couple dancing at Apple Fest"/>
-    Source: <cite><a href="https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/">The Ithacan</a></cite>
+    <img class="activitiesPic" src="images/fire.jpg" alt="Couple dancing at Apple Fest"/>
+    <cite><a href="https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/">The Ithacan</a></cite>
 
     <p> In addition to music, dancing, and rides, visitors of Ithaca's Apple Harvest Festival will find different kinds of family entertainment. Seen here is Michael Hilby juggling three flaming poles while riding a unicycle. Hilby has performed at the festival in years past. </p>
   </main>
