--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
 
 <body>
   <div id="container">
-  <header>
+    <header>
 
 
-    <h2> The 39th Annual... </h2>
-    <h1> Apple Harvest Festival </h1>
-    <nav>
-      <ul>
-        <li><a href= "index.html">Home</a></li>
-        <li><a href= "gallery.html">Gallery</a></li>
-        <li><a href= "activities.html">Activities</a></li>
-        <li><a href="info.html">Info</a></li>
-      </ul>
-    </nav>
-    <p>Downtown Ithaca, NY, 28 - 30<sup>th</sup> September 2021</p>
-  </header>
+      <h2> The 39th Annual... </h2>
+      <h1> Apple Harvest Festival </h1>
+      <nav>
+        <ul>
+          <li><a href= "index.html">Home</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href= "gallery.html">Gallery</a></li>
+          <li><a href= "activities.html">Activities</a></li>
+          <li><a href="info.html">Info</a></li>
+        </ul>
+      </nav>
+      <p>Downtown Ithaca, NY, 28 - 30<sup>th</sup> September 2021</p>
+    </header>
   </div>
 
   <main>
@@ -34,6 +35,8 @@
 
       <div class="about-description">
 
+        <h3> About Apple Fest </h3>
+
 
 
         <!-- Source: https://www.facebook.com/events/217127885517129/ -->
@@ -41,62 +44,14 @@
 
 
         <p> Join us Saturday and Sunday for two full days of performances! </p>
-
-        <h3> Schedule </h3>
-
-        <div class="main-schedule">
-
-
-          <div class="schedule-saturday">
-
-            <h4> SATURDAY, SEPTEMBER 29</h4>
-            <h5>At the Bernie Milton Pavillion</h5>
-            <p>10:00 – 10:45 AM IC Voicestream <br>
-              11:00 – 11:45 AM Grassanova<br>
-              12:00 – 12:45 PM B33T JU1C3<br>
-              1:00 – 1:45 PM Rachel Beverly Music<br>
-              2:00 – 2:45 PM Vitamin L<br>
-              3:00 – 3:45 PM Vee Da Bee<br>
-              4:00 – 4:45 PM Mijail Martinez <br>
-              5:00 – 6:00 PM Burns And Kristy Band <br> </p>
-
-              <h5>At West State Street</h5>
-              <p>12:30 – 1:15 PM June with Chandani Belly Dance Troupe<br>
-                1:30 – 2:15 PM iCircus<br>
-                2:30 – 3:15 PM Danza Romani<br> </p>
-
-          </div>
-
-          <div class="schedule-sunday">
-
-            <h4>SUNDAY, SEPTEMBER 30 </h4>
-            <h5>At the Bernie Milton Pavillion</h5>
-            <p>10:00 – 10:45 AM Flight Performing Arts<br>
-              11:00 – 11:45 AM Blue Skies<br>
-              12:00 – 12:45 PM Jess Novak<br>
-              1:00 – 1:45 PM Liam Alone<br>
-              2:00 – 2:30 PM Science Cabaret Presents: Bites of Science<br>
-              3:00 – 3:40 PM IC Jazz Vocal Ensemble<br>
-              4:00 – 4:45 PM Papa Muse<br>
-              5:15 – 6:15 PM NEO Project</p>
-
-              <h5>At West State Street</h5>
-              <p>1:00 – 1:45 PM Zajal the Sugarplum Fairy<br>
-                2:15 – 3:00 PM Mirage Belly Dancers of Ithaca</p>
-
-          </div>
-        </div>
-
-
       </div>
 
       <div class="about-image">
 
         <!-- Source: https://www.fingerlakes.org/events/37th-annual-apple-harvest-festival- downtown-ithaca-presented-tompkins-trust-company -->
         <img src="images/kidsEating.jpg" alt="Kids at apple fest eating caramel apples" class="smallImage"/>
-        Source: <cite><a href="https://www.fingerlakes.org/events/37th-annual-apple-harvest-festival-downtown-ithaca-presented-tompkins-trust-company">Finger Lakes</a></cite>
+        <cite><a href="https://www.fingerlakes.org/events/37th-annual-apple-harvest-festival-downtown-ithaca-presented-tompkins-trust-company">Finger Lakes</a></cite>
       </div>
-
     </div>
 
 
