--- a/activities.html
+++ b/activities.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Activities</title>
+  <title>Apple Harvest Festival</title>
   <link rel="stylesheet" type="text/css" href="styles/site.css"/>
 </head>
 
@@ -29,40 +29,58 @@
     <h2> Activities </h2>
 
     <!-- Source: https://www.facebook.com/events/217127885517129/ -->
-    <p> The 39th Annual Great Downtown Ithaca Apple Harvest Festival by Presented Tompkins Trust Company will feature plenty of apples, local produce, fresh baked goods, family entertainment at every turn, games, rides, prizes, live performances and MORE! </p>
+    <p class="a-description"> The 39th Annual Great Downtown Ithaca Apple Harvest Festival by Presented Tompkins Trust Company will feature plenty of apples, local produce, fresh baked goods, family entertainment at every turn, games, rides, prizes, live performances and MORE! </p>
 
 
-    <h3> Live Music </h3>
+    <div class="activities">
+      <div class="activity">
+        <div class="a-left">
+          <h3> Live Music </h3>
+          <p> Live music is one of Apple Fest's greatest features! At Bernie Milton Stage you'll find tons of different artists and genres from jazz to folk. Featured here is Dapper Dan performing Toots & The Maytals "54-46" in September of 2017. </p>
+        </div>
+        <div class="a-right">
+          <!-- Source: https://www.youtube.com/watch?v=QchZ7VKmYlw -->
+          <img class="activitiesPic" src="images/liveMusic.jpg" alt="Live music at Apple Fest"/>
+          <cite><a href="https://www.youtube.com/watch?v=QchZ7VKmYlw">YouTube</a></cite>
+        </div>
+      </div>
+      <div class="activity">
+        <div class="a-left">
+          <h3> Dancing </h3>
+          <p> Of course, with music comes dancing. You'll find  people dancing on every corner of the Commons! In addition, be sure to check out some of our dance groups, like the Mirage Belly Dancers of Ithaca or the Chandani Belly Dance Troupe.</p>
+        </div>
+        <div class="a-right">
 
-    <!-- Source: https://www.youtube.com/watch?v=QchZ7VKmYlw -->
-    <img class="activitiesPic" src="images/liveMusic.jpg" alt="Live music at Apple Fest"/>
-    <cite><a href="https://www.youtube.com/watch?v=QchZ7VKmYlw">YouTube</a></cite>
+          <!-- Source: https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/ -->
+          <img class="activitiesPic" src="images/dancing.jpg" alt="Couple dancing at Apple Fest"/>
+          <cite><a href="https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/">The Ithacan</a></cite>
+        </div>
+      </div>
+      <div class="activity">
+        <div class="a-left">
+          <h3> Rides </h3>
+          <p> What's a festival without carnival rides? Featured here is the Ferris Wheel from Apple Fest 2013. In addition to Ferris Wheels, Ithaca Apple Fest features wagon rides and a fun house. </p>
+        </div>
+        <div class="a-right">
 
-    <p> Live music is one of Apple Fest's greatest features! At Bernie Milton Stage you'll find tons of different artists and genres from jazz to folk. Featured here is Dapper Dan performing Toots & The Maytals "54-46" in September of 2017. </p>
+          <!-- Source: https://www.youtube.com/watch?v=L8dSbuQkY48 -->
+          <img class="activitiesPic" src="images/rides.jpg" alt="Couple dancing at Apple Fest"/>
+          <cite><a href="https://www.youtube.com/watch?v=L8dSbuQkY48">YouTube</a></cite>
+        </div>
+      </div>
+      <div class="activity">
+        <div class="a-left">
+          <h3> Entertainment </h3>
+          <p> In addition to music, dancing, and rides, visitors of Ithaca's Apple Harvest Festival will find different kinds of family entertainment. Seen here is Michael Hilby juggling three flaming poles while riding a unicycle. Hilby has performed at the festival in years past. </p>
+        </div>
+        <div class="a-right">
 
-    <h3> Dancing </h3>
-
-    <!-- Source: https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/ -->
-    <img class="activitiesPic" src="images/dancing.jpg" alt="Couple dancing at Apple Fest"/>
-    <cite><a href="https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/">The Ithacan</a></cite>
-
-    <p> Of course, with music comes dancing. You'll find people dancing on every corner of the Commons! </p>
-
-    <h3> Rides </h3>
-
-    <!-- Source: https://www.youtube.com/watch?v=L8dSbuQkY48 -->
-    <img class="activitiesPic" src="images/rides.jpg" alt="Couple dancing at Apple Fest"/>
-    <cite><a href="https://www.youtube.com/watch?v=L8dSbuQkY48">YouTube</a></cite>
-
-    <p> What's a festival without carnival rides? Featured here is the Ferris Wheel from Apple Fest 2013. </p>
-
-    <h3> Entertainment </h3>
-
-    <!-- Source: https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/ -->
-    <img class="activitiesPic" src="images/fire.jpg" alt="Couple dancing at Apple Fest"/>
-    <cite><a href="https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/">The Ithacan</a></cite>
-
-    <p> In addition to music, dancing, and rides, visitors of Ithaca's Apple Harvest Festival will find different kinds of family entertainment. Seen here is Michael Hilby juggling three flaming poles while riding a unicycle. Hilby has performed at the festival in years past. </p>
+          <!-- Source: https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/ -->
+          <img class="activitiesPic" src="images/fire.jpg" alt="Couple dancing at Apple Fest"/>
+          <cite><a href="https://theithacan.org/life-culture/apple-of-ithacas-eye-34th-annual-applefest/">The Ithacan</a></cite>
+        </div>
+      </div>
+    </div>
   </main>
 
 </html>
